--- a/main.ipynb
+++ b/main.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-12-25 12:34:47] Tanlangan fayl: emaktab.xlsx\n",
+      "[2024-12-25 12:34:47] Login avtomatlashtirish boshlanyapti...\n",
+      "[2024-12-25 12:34:48] ✅ doublekkyearner.xx77 - Muvaffaqiyatli kirib-chiqildi!\n",
+      "[2024-12-25 12:34:53] ✅ kaeyahh - Muvaffaqiyatli kirib-chiqildi!\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "import customtkinter as ctk\n",
     "import tkinter as tk\n",
     "from tkinter import filedialog, messagebox\n",
@@ -343,13 +355,13 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    app = ModernLoginAutomation()\n",
-    "    app.app.mainloop()\n"
+    "    app.app.mainloop()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
