fix login or password error

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,22 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-12-25 12:34:47] Tanlangan fayl: emaktab.xlsx\n",
-      "[2024-12-25 12:34:47] Login avtomatlashtirish boshlanyapti...\n",
-      "[2024-12-25 12:34:48] ✅ doublekkyearner.xx77 - Muvaffaqiyatli kirib-chiqildi!\n",
-      "[2024-12-25 12:34:53] ✅ kaeyahh - Muvaffaqiyatli kirib-chiqildi!\n"
+      "[2025-01-06 14:04:29] Tanlangan fayl: credentials.xlsx\n",
+      "[2025-01-06 14:04:30] Login avtomatlashtirish boshlanyapti...\n",
+      "[2025-01-06 14:04:30] ✅ kaeyahh - Muvaffaqiyatli kirib-chiqildi!\n",
+      "[2025-01-06 14:04:36] ✅ doublekkyearner.xx77 - Muvaffaqiyatli kirib-chiqildi!\n",
+      "[2025-01-06 14:04:40] ✅ hienme - Muvaffaqiyatli kirib-chiqildi!\n",
+      "[2025-01-06 14:04:51] ❌ hienme - Xato: Message: \n",
+      "Stacktrace:\n",
+      "#0 0x58df938d531a <unknown>\n",
+      "#1 0x58df933eb6e0 <unknown>\n",
+      "#2 0x58df9343a3e6 <unknown>\n",
+      "#3 0x58df9343a681 <unknown>\n",
+      "#4 0x58df9347fb04 <unknown>\n",
+      "#5 0x58df9345e48d <unknown>\n",
+      "#6 0x58df9347ced7 <unknown>\n",
+      "#7 0x58df9345e203 <unknown>\n",
+      "#8 0x58df9342ccc0 <unknown>\n",
+      "#9 0x58df9342dc9e <unknown>\n",
+      "#10 0x58df938a2d0b <unknown>\n",
+      "#11 0x58df938a6c92 <unknown>\n",
+      "#12 0x58df9388fb3c <unknown>\n",
+      "#13 0x58df938a7807 <unknown>\n",
+      "#14 0x58df938750df <unknown>\n",
+      "#15 0x58df938c4578 <unknown>\n",
+      "#16 0x58df938c4740 <unknown>\n",
+      "#17 0x58df938d4196 <unknown>\n",
+      "#18 0x7411e7894ac3 <unknown>\n",
+      "\n",
+      "[2025-01-06 14:04:51] ✅ m46216 - Muvaffaqiyatli kirib-chiqildi!\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "import customtkinter as ctk\n",
     "import tkinter as tk\n",
     "from tkinter import filedialog, messagebox\n",
@@ -40,27 +63,22 @@
     "\n",
     "class ModernLoginAutomation:\n",
     "    def __init__(self):\n",
-    "        # Setup the main window\n",
     "        self.app = ctk.CTk()\n",
     "        self.app.title(\"Login Automation Dashboard\")\n",
     "        self.app.geometry(\"1000x800\")\n",
     "        \n",
-    "        # Configure grid layout\n",
     "        self.app.grid_columnconfigure(0, weight=1)\n",
     "        self.app.grid_rowconfigure(0, weight=1)\n",
     "        \n",
-    "        # Variables\n",
     "        self.file_path = None\n",
     "        self.is_running = False\n",
     "        self.current_progress = 0\n",
     "        self.sidebar_open = True\n",
     "        \n",
-    "        # Create main container\n",
     "        self.create_main_frame()\n",
     "        self.create_sidebar()\n",
     "        self.create_main_content()\n",
     "        \n",
-    "        # Theme settings\n",
     "        ctk.set_appearance_mode(\"dark\")\n",
     "        ctk.set_default_color_theme(\"blue\")\n",
     "\n",
@@ -71,11 +89,9 @@
     "        self.main_frame.grid_rowconfigure(0, weight=1)\n",
     "\n",
     "    def create_sidebar(self):\n",
-    "        # Sidebar frame with matching dark theme color\n",
     "        self.sidebar = ctk.CTkFrame(self.main_frame, width=250)\n",
     "        self.sidebar.grid(row=0, column=0, sticky=\"nsew\", padx=0)\n",
     "        \n",
-    "        # Hamburger menu button with matching theme color\n",
     "        self.hamburger_button = ctk.CTkButton(\n",
     "            self.app, \n",
     "            text=\"☰\", \n",
@@ -87,7 +103,6 @@
     "        )\n",
     "        self.hamburger_button.place(x=10, y=10)\n",
     "        \n",
-    "        # App title\n",
     "        self.logo_label = ctk.CTkLabel(\n",
     "            self.sidebar, \n",
     "            text=\"Login Automation\",\n",
@@ -95,7 +110,6 @@
     "        )\n",
     "        self.logo_label.grid(row=1, column=0, padx=20, pady=(20, 10))\n",
     "        \n",
-    "        # Theme switch\n",
     "        self.theme_switch = ctk.CTkSwitch(\n",
     "            self.sidebar, \n",
     "            text=\"Qora Mavzu\",\n",
@@ -104,17 +118,15 @@
     "        self.theme_switch.grid(row=2, column=0, padx=20, pady=10)\n",
     "        self.theme_switch.select()\n",
     "        \n",
-    "        # Navigation buttons\n",
     "        self.nav_button_1 = ctk.CTkButton(\n",
     "            self.sidebar, \n",
-    "            text=\"Boshqaruv Paneli\",  # \"Dashboard\" in Uzbek\n",
+    "            text=\"Boshqaruv Paneli\",\n",
     "            command=self.show_dashboard,\n",
     "            width=180,\n",
     "            height=40\n",
     "        )\n",
     "        self.nav_button_1.grid(row=3, column=0, padx=20, pady=10)\n",
     "        \n",
-    "        # Version label\n",
     "        self.version_label = ctk.CTkLabel(\n",
     "            self.sidebar, \n",
     "            text=\"v1.0.0\",\n",
@@ -123,34 +135,31 @@
     "        self.version_label.grid(row=4, column=0, padx=20, pady=(10, 20))\n",
     "\n",
     "    def create_main_content(self):\n",
-    "        # Main content frame\n",
     "        self.content = ctk.CTkFrame(self.main_frame)\n",
     "        self.content.grid(row=0, column=1, sticky=\"nsew\", padx=0)\n",
     "        self.content.grid_columnconfigure(0, weight=1)\n",
     "        self.content.grid_rowconfigure(3, weight=1)\n",
     "        \n",
-    "        # File selection section\n",
     "        self.file_frame = ctk.CTkFrame(self.content)\n",
     "        self.file_frame.grid(row=0, column=0, sticky=\"ew\", padx=20, pady=(20, 10))\n",
     "        self.file_frame.grid_columnconfigure(0, weight=1)\n",
     "        \n",
     "        self.file_label = ctk.CTkLabel(\n",
     "            self.file_frame, \n",
-    "            text=\"Fayl tanlanmagan\",  # \"No file selected\" in Uzbek\n",
+    "            text=\"Fayl tanlanmagan\",\n",
     "            font=ctk.CTkFont(size=14)\n",
     "        )\n",
     "        self.file_label.grid(row=0, column=0, sticky=\"w\", padx=20, pady=10)\n",
     "        \n",
     "        self.browse_button = ctk.CTkButton(\n",
     "            self.file_frame, \n",
-    "            text=\"Excel Faylini Tanlash\",  # \"Browse Excel File\" in Uzbek\n",
+    "            text=\"Excel Faylini Tanlash\",\n",
     "            command=self.browse_file,\n",
     "            width=180,\n",
     "            height=40\n",
     "        )\n",
     "        self.browse_button.grid(row=0, column=1, padx=20, pady=10)\n",
     "        \n",
-    "        # Progress section\n",
     "        self.progress_frame = ctk.CTkFrame(self.content)\n",
     "        self.progress_frame.grid(row=1, column=0, sticky=\"ew\", padx=20, pady=10)\n",
     "        self.progress_frame.grid_columnconfigure(0, weight=1)\n",
@@ -162,19 +171,17 @@
     "        )\n",
     "        self.progress_label.grid(row=0, column=0, sticky=\"w\", padx=20, pady=5)\n",
     "        \n",
-    "        # Full-width progress bar\n",
     "        self.progress_bar = ctk.CTkProgressBar(self.progress_frame, height=30)\n",
     "        self.progress_bar.grid(row=1, column=0, sticky=\"ew\", padx=20, pady=5)\n",
     "        self.progress_bar.set(0)\n",
     "        \n",
-    "        # Control buttons - spread across width\n",
     "        self.button_frame = ctk.CTkFrame(self.content)\n",
     "        self.button_frame.grid(row=2, column=0, sticky=\"ew\", padx=20, pady=10)\n",
     "        self.button_frame.grid_columnconfigure(1, weight=1)\n",
     "        \n",
     "        self.start_button = ctk.CTkButton(\n",
     "            self.button_frame, \n",
-    "            text=\"Boshlash\",  # \"Start\" in Uzbek\n",
+    "            text=\"Boshlash\",\n",
     "            command=self.start_automation,\n",
     "            state=\"disabled\",\n",
     "            width=180,\n",
@@ -184,7 +191,7 @@
     "        \n",
     "        self.stop_button = ctk.CTkButton(\n",
     "            self.button_frame, \n",
-    "            text=\"To'xtatish\",  # \"Stop\" in Uzbek\n",
+    "            text=\"To'xtatish\",\n",
     "            command=self.stop_automation,\n",
     "            state=\"disabled\",\n",
     "            width=180,\n",
@@ -194,14 +201,13 @@
     "        \n",
     "        self.reset_button = ctk.CTkButton(\n",
     "            self.button_frame, \n",
-    "            text=\"Qayta Sozlash\",  # \"Reset\" in Uzbek\n",
+    "            text=\"Qayta Sozlash\",\n",
     "            command=self.reset_automation,\n",
     "            width=180,\n",
     "            height=40\n",
     "        )\n",
     "        self.reset_button.grid(row=0, column=2, padx=10, pady=10)\n",
     "        \n",
-    "        # Log section\n",
     "        self.log_frame = ctk.CTkFrame(self.content)\n",
     "        self.log_frame.grid(row=3, column=0, sticky=\"nsew\", padx=20, pady=(10, 20))\n",
     "        self.log_frame.grid_columnconfigure(0, weight=1)\n",
@@ -209,7 +215,7 @@
     "        \n",
     "        self.log_label = ctk.CTkLabel(\n",
     "            self.log_frame, \n",
-    "            text=\"Faoliyat Logi\",  # \"Activity Log\" in Uzbek\n",
+    "            text=\"Faoliyat Logi\",\n",
     "            font=ctk.CTkFont(size=16, weight=\"bold\")\n",
     "        )\n",
     "        self.log_label.grid(row=0, column=0, sticky=\"w\", padx=20, pady=10)\n",
@@ -239,18 +245,18 @@
     "            self.theme_switch.select()\n",
     "\n",
     "    def show_dashboard(self):\n",
-    "        self.log_message(\"Boshqaruv paneliga o'tildi\")  # \"Switched to Dashboard view\" in Uzbek\n",
+    "        self.log_message(\"Boshqaruv paneliga o'tildi\")\n",
     "\n",
     "    def browse_file(self):\n",
     "        self.file_path = filedialog.askopenfilename(\n",
-    "            filetypes=[(\"Excel Fayllari\", \"*.xlsx\")]  # \"Excel Files\" in Uzbek\n",
+    "            filetypes=[(\"Excel Fayllari\", \"*.xlsx\")]\n",
     "        )\n",
     "        if self.file_path:\n",
     "            self.file_label.configure(\n",
-    "                text=f\"Tanlangan: {os.path.basename(self.file_path)}\"  # \"Selected\" in Uzbek\n",
+    "                text=f\"Tanlangan: {os.path.basename(self.file_path)}\"\n",
     "            )\n",
     "            self.start_button.configure(state=\"normal\")\n",
-    "            self.log_message(f\"Tanlangan fayl: {os.path.basename(self.file_path)}\")  # \"Selected file\" in Uzbek\n",
+    "            self.log_message(f\"Tanlangan fayl: {os.path.basename(self.file_path)}\")\n",
     "\n",
     "    def start_automation(self):\n",
     "        if not self.is_running and self.file_path:\n",
@@ -258,9 +264,8 @@
     "            self.start_button.configure(state=\"disabled\")\n",
     "            self.stop_button.configure(state=\"normal\")\n",
     "            self.browse_button.configure(state=\"disabled\")\n",
-    "            self.log_message(\"Login avtomatlashtirish boshlanyapti...\")  # \"Starting login automation...\" in Uzbek\n",
+    "            self.log_message(\"Login avtomatlashtirish boshlanyapti...\")\n",
     "            \n",
-    "            # Run automation in a separate thread to keep the UI responsive\n",
     "            automation_thread = threading.Thread(target=self.automate_login_from_excel)\n",
     "            automation_thread.start()\n",
     "\n",
@@ -269,7 +274,7 @@
     "        self.stop_button.configure(state=\"disabled\")\n",
     "        self.start_button.configure(state=\"normal\")\n",
     "        self.browse_button.configure(state=\"normal\")\n",
-    "        self.log_message(\"Avtomatlashtirish to'xtatildi.\")  # \"Automation stopped\" in Uzbek\n",
+    "        self.log_message(\"Avtomatlashtirish to'xtatildi.\")\n",
     "\n",
     "    def reset_automation(self):\n",
     "        self.is_running = False\n",
@@ -279,8 +284,8 @@
     "        self.start_button.configure(state=\"disabled\")\n",
     "        self.stop_button.configure(state=\"disabled\")\n",
     "        self.browse_button.configure(state=\"normal\")\n",
-    "        self.file_label.configure(text=\"Fayl tanlanmagan\")  # \"No file selected\" in Uzbek\n",
-    "        self.log_message(\"Avtomatlashtirish qayta tiklandi.\")  # \"Automation reset\" in Uzbek\n",
+    "        self.file_label.configure(text=\"Fayl tanlanmagan\")\n",
+    "        self.log_message(\"Avtomatlashtirish qayta tiklandi.\")\n",
     "\n",
     "    def log_message(self, message):\n",
     "        timestamp = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
@@ -297,12 +302,10 @@
     "                for _, row in df.iterrows()\n",
     "            ]\n",
     "            \n",
-    "            # Set Chrome options to open in a larger window\n",
     "            chrome_options = Options()\n",
-    "            chrome_options.add_argument(\"--window-size=1200,800\")  # Set window size to 1200x800\n",
-    "            chrome_options.add_argument(\"--start-maximized\")  # Optional: Start maximized\n",
+    "            chrome_options.add_argument(\"--window-size=1200,800\")\n",
+    "            chrome_options.add_argument(\"--start-maximized\")\n",
     "\n",
-    "            # Initialize WebDriver\n",
     "            service = Service(CHROME_DRIVER_PATH)\n",
     "            driver = webdriver.Chrome(service=service, options=chrome_options)\n",
     "            wait = WebDriverWait(driver, 10)\n",
@@ -313,8 +316,6 @@
     "                if not self.is_running:\n",
     "                    break\n",
     "                try:\n",
-    "                    # Perform login actions here...\n",
-    "                    self.log_message(f\"✅ {user['login']} - Muvaffaqiyatli kirib-chiqildi!\")\n",
     "                    driver.get(URL_EMAKTAB_LOGIN)\n",
     "                    \n",
     "                    login_field = wait.until(\n",
@@ -330,23 +331,27 @@
     "                    password_field.send_keys(user[\"password\"])\n",
     "                    \n",
     "                    password_field.send_keys(Keys.ENTER)\n",
-    "                    sleep(random.uniform(0.11, 1.12))\n",
     "                    \n",
-    "                    logout_button = wait.until(\n",
-    "                        EC.element_to_be_clickable((By.LINK_TEXT, \"Chiqish\"))  # \"Logout\" in Uzbek\n",
-    "                    )\n",
-    "                    logout_button.click()\n",
-    "                    sleep(random.uniform(0.5, 1))\n",
+    "                    try:\n",
+    "                        logout_button = WebDriverWait(driver, 3).until(\n",
+    "                            EC.element_to_be_clickable((By.LINK_TEXT, \"Chiqish\"))\n",
+    "                        )\n",
+    "                        logout_button.click()\n",
+    "                        sleep(random.uniform(0.5, 1))\n",
+    "                        self.log_message(f\"✅ {user['login']} - Muvaffaqiyatli kirib-chiqildi!\")\n",
+    "                    except:\n",
+    "                        self.log_message(f\"⚠️ {user['login']} - 3 soniya ichida kirib bo'lmadi. Keyingi foydalanuvchiga o'tilmoqda...\")\n",
+    "                        continue\n",
     "                    \n",
     "                except Exception as e:\n",
-    "                    self.log_message(f\"❌ {user['login']} - Xato: {str(e)}\")  # \"Error\" in Uzbek\n",
+    "                    self.log_message(f\"❌ {user['login']} - Xato: {str(e)}\")\n",
     "                finally:\n",
     "                    progress_value = int((i / total_users) * 100)\n",
     "                    self.update_progress(progress_value)\n",
     "\n",
-    "            driver.quit()  # Close the browser after all logins are processed\n",
+    "            driver.quit()\n",
     "        except Exception as e:\n",
-    "            self.log_message(f\"❌ Xato: {str(e)}\")  # \"Error\" in Uzbek\n",
+    "            self.log_message(f\"❌ Xato: {str(e)}\")\n",
     "\n",
     "    def update_progress(self, progress):\n",
     "        self.current_progress = progress\n",
