--- a/main.ipynb
+++ b/main.ipynb
@@ -303,20 +303,20 @@
     "                        )\n",
     "                        logout_button.click()\n",
     "                        sleep(random.uniform(0.5, 1))\n",
-    "                        self.log_message(f\"✅ {user['login']} - Muvaffaqiyatli kirib-chiqildi!\")\n",
+    "                        self.log_message(f\"{user['login']} - Muvaffaqiyatli kirib-chiqildi!\")\n",
     "                    except:\n",
-    "                        self.log_message(f\"⚠️ {user['login']} - 3 soniya ichida kirib bo'lmadi. Keyingi foydalanuvchiga o'tilmoqda...\")\n",
+    "                        self.log_message(f\"⚠{user['login']} - 3 soniya ichida kirib bo'lmadi. Keyingi foydalanuvchiga o'tilmoqda...\")\n",
     "                        continue\n",
     "                    \n",
     "                except Exception as e:\n",
-    "                    self.log_message(f\"❌ {user['login']} - Xato: {str(e)}\")\n",
+    "                    self.log_message(f\"{user['login']} - Xato: {str(e)}\")\n",
     "                finally:\n",
     "                    progress_value = int((i / total_users) * 100)\n",
     "                    self.update_progress(progress_value)\n",
     "\n",
     "            driver.quit()\n",
     "        except Exception as e:\n",
-    "            self.log_message(f\"❌ Xato: {str(e)}\")\n",
+    "            self.log_message(f\"Xato: {str(e)}\")\n",
     "\n",
     "    def update_progress(self, progress):\n",
     "        self.current_progress = progress\n",
